# alpha_panda

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.test  Makefile  README.md  alembic.ini  cli.py  constraints.txt  docker-compose.test.yml  docker-compose.yml  pytest.ini  requirements-test.txt  requirements.txt  test-infrastructure-setup.sh  test_enhanced_monitoring.py
examples/AlphaPT_Reference_Implementation/: .env.example  .gitignore  CLAUDE_Reference_Implementation.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
examples/AlphaPT_Reference_Implementation/api/: __init__.py  api_server.py  error_handlers.py  middleware.py  routes.py  server.py  websocket.py  websocket_routes.py
examples/AlphaPT_Reference_Implementation/api/routers/: __init__.py  auth.py  health.py  logs.py  market_data.py  monitoring.py  risk.py  strategies.py  system.py  trading.py
examples/AlphaPT_Reference_Implementation/app/: README.md  __init__.py  application.py  lifecycle.py
examples/AlphaPT_Reference_Implementation/core/: __init__.py
examples/AlphaPT_Reference_Implementation/core/auth/: __init__.py  auth_manager.py  exceptions.py  models.py  session_manager.py
examples/AlphaPT_Reference_Implementation/core/config/: __init__.py  api_config.py  database_config.py  event_config.py  market_data_config.py  monitoring_config.py  risk_config.py  settings.py  trading_config.py
examples/AlphaPT_Reference_Implementation/core/database/: __init__.py  connection.py  models.py  repositories.py
examples/AlphaPT_Reference_Implementation/core/events/: README.md  __init__.py  event_bus_core.py  event_exceptions.py  event_publisher_service.py  event_types.py  event_validator.py  schema_registry.py  stream_manager.py  subscriber_manager.py
examples/AlphaPT_Reference_Implementation/core/logging/: README.md  __init__.py  base_logger.py  business_loggers.py  logger.py  (+4 more)
examples/AlphaPT_Reference_Implementation/instrument_data/: __init__.py
examples/AlphaPT_Reference_Implementation/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secrets.yaml  service.yaml
examples/AlphaPT_Reference_Implementation/mock_market_feed/: __init__.py  data_generator.py  mock_feed_manager.py  models.py  scenarios.py
examples/AlphaPT_Reference_Implementation/monitoring/: __init__.py  alert_manager.py  business_metrics.py  health_checker.py  metrics_collector.py  observability_stack.py  performance_monitor.py  performance_profiler.py  production_alerting.py
examples/AlphaPT_Reference_Implementation/nginx/: nginx.conf
examples/AlphaPT_Reference_Implementation/paper_trade/: __init__.py  engine.py  models.py  orders.py  portfolio.py  types.py
examples/AlphaPT_Reference_Implementation/risk_manager/: __init__.py  models.py  risk_manager.py  types.py
examples/AlphaPT_Reference_Implementation/scripts/: debug_nats.py  log_management.py  production-deploy.sh  production_build.py  test_shutdown.py  verify_fixes.py
examples/AlphaPT_Reference_Implementation/storage/: README.md  __init__.py  clickhouse_manager.py  clickhouse_schemas.py  data_quality_monitor.py  market_feed_factory.py  migration_manager.py  redis_cache_manager.py  redis_performance_manager.py  storage_manager.py
examples/AlphaPT_Reference_Implementation/strategy_manager/: __init__.py  base_strategy.py  parallel_strategy_executor.py  signal_types.py  strategy_factory.py  strategy_health_monitor.py  strategy_manager.py
examples/AlphaPT_Reference_Implementation/tests/: README.md  __init__.py  conftest.py
examples/AlphaPT_Reference_Implementation/zerodha_market_feed/: __init__.py  config.py  instruments.csv  zerodha_feed_manager.py
examples/AlphaPT_Reference_Implementation/zerodha_trade/: __init__.py  engine.py  models.py  orders.py  positions.py  types.py
(+547 files in other folders)
